[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/core/workbench/Workbench.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/workbench.png" type="Texture" id=2]
[ext_resource path="res://source/core/workbench/Line.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/core/workbench/FishSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/core/workbench/FishCatcher.tscn" type="PackedScene" id=5]
[ext_resource path="res://graphics/images/machine.png" type="Texture" id=6]

[node name="Workbench" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Bench" type="Sprite" parent="."]
position = Vector2( 0, 48 )
texture = ExtResource( 2 )
centered = false

[node name="Lines" type="Node2D" parent="."]
editor/display_folded = true

[node name="Line1" parent="Lines" instance=ExtResource( 3 )]
position = Vector2( 0, 60 )

[node name="Line2" parent="Lines" instance=ExtResource( 3 )]
position = Vector2( 240, 60 )

[node name="FishSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 248, 75 )

[node name="FishContainer" type="Node2D" parent="."]

[node name="FishCatcher" parent="." instance=ExtResource( 5 )]
position = Vector2( -38, 75 )

[node name="Machine" type="Sprite" parent="."]
position = Vector2( 209, 0 )
texture = ExtResource( 6 )
centered = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
